# JSON2MAF

./: .gitignore  BUGFIXES.md  Cargo.toml  INCONSISTENCY_ANALYSIS.md  LICENSE  Manifest.toml  Project.toml  README.md  benchmark_test.jl  check_transcript_fields.jl  compare_performance.jl  convert_comments.py  output_from_julia_version.maf  rebuild_rust.sh  report_from_julia_version.txt  report_julia_version.txt
examples/sample_data/: sample_positions.json  sample_snippet.txt  test_input.json  test_output.maf
rust_version/: Cargo.toml  README.md
rust_version/src/: converter.rs  main.rs  parser.rs  types.rs  writer.rs
rust_version/src/filters/: clinvar.rs  decision.rs  mod.rs  predictive.rs  quality.rs
src/: JSON2MAF.jl  converter.rs  json_stream.rs  lib.rs  main.rs  parser.rs  types.rs  writer.rs
src/converters/: MAFConverter.jl
src/filters/: ClinVarFilter.jl  DecisionEngine.jl  PredictiveScores.jl  QualityFilter.jl  clinvar.rs  decision.rs
src/parser/: NirvanaParser.jl
src/sv/: converter.rs  mod.rs  parser.rs  types.rs  writer.rs
src/utils/: DataStructures.jl  FilterConfig.jl
src/writers/: MAFWriter.jl
test/: clinvar_filter_tests.jl  datastructures_tests.jl  decision_engine_tests.jl  maf_converter_tests.jl  maf_writer_tests.jl  maf_writer_tests_old.jl  maf_writer_tests_updated.jl  parser_tests.jl  predictive_scores_tests.jl  quality_filter_tests.jl  runtests.jl
tests/: integration_test.rs
